Fix logo size on mobile template

--- a/park-city-express/styles/template.css
+++ b/park-city-express/styles/template.css
@@ -108,6 +108,14 @@ ul {
 	padding: 25px 20px;
 }
 
+@media all and (max-width: 768px) {
+	#sidebar img {
+		max-width: 75%;
+		min-width: 300px;
+		padding: 0 20px 25px 20px;
+	}
+}
+
 /* FOOTER */
 footer {
 	padding:20px;
